PLANET-2418 - Tasks block: Fix buttons misalignment on mobile devices

--- a/assets/scss/blocks/_tasks.scss
+++ b/assets/scss/blocks/_tasks.scss
@@ -261,9 +261,8 @@
       }
 
       .mobile-accordion-info {
-        width: 60%;
-        float: left;
-        margin-left: 10px;
+        width: 90%;
+        margin: 0 10px;
         color: $percentage-text;
         font-size: rem(14);
       }
